# agentup-rag

./: CLAUDE.md  README.md  example_agentup.yml  pyproject.toml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
docs/: RAG_SETUP_GUIDE.md  setup_guide.md
src/agentup_rag/: __init__.py  models.py  plugin.py
src/agentup_rag/backends/: __init__.py  base.py  factory.py
src/agentup_rag/backends/embedding/: __init__.py  local.py  openai.py
src/agentup_rag/backends/vector_store/: __init__.py  chroma.py  memory.py  pinecone.py  weaviate.py
src/agentup_rag/processing/: __init__.py  chunking.py  document_processor.py  loaders.py
tests/: __init__.py  test_backends.py  test_plugin.py
